
Changelog
=========

4.0.8 (unreleased)
------------------

- Setup: Make sure to set `current_unit_id` registry setting
  even when `SQL` is not ticked.
  [lgraf]


4.0.7 (2015-01-06)
------------------

- OrgUnitSelector: Fix fallback logic:

  Build intersection of current admin units' org units and
  user's org units. If some of the user's org units are in the
  current admin unit, use the first of those as the fallback.

  Otherwise we're in an inter-admin unit operation, default to
  current admin unit's first org unit.
  [lgraf]

- CookieStorage: Extend max age of cookies to 30 days (was
  "end of browser session" before).
  [lgraf]

- OrgUnitSelector: Store selected OrgUnit after determining fallback.
  [lgraf]


4.0.6 (2014-12-09)
------------------

- Implement pessimistic connection invalidation (MySQL only):
  Check every connection that has been checked out from pool, and
  invalidate it if it's stale.
  [lgraf]

- Reworked OrgUnit Selector:
    - Store current unit to regular cookie instead of using the session_data_manager.
    - Differentiate between users_units (selectable) and admin_unit's org_unit
      (current org_unit).
    - Change current org_unit functionality, the current orgunit has to be
      part of the current admin_unit.

  [phgross]

- Made schemamigrations to 4.0.x release oracle compatible.
  [phgross]

- Fixed transporting task with the OGDS Transporter beetwen different admin_units.
  [phgross]


4.0.5 (2014-11-25)
------------------

- Extract attachments view: Fixed contenttype helper when lookup via filename.
  [phgross]


4.0.4 (2014-11-13)
------------------

- Extract attachments view: fixed icon display in attachment listing.
  [phgross]

- Disable paste action for mails.
  [phgross]

- Set proper Content-Type header in responses from LDAP control panel views.
  [lgraf]

- Fix Unicode handling in OGDSUpdater.
  [lgraf]


4.0.3 (2014-11-10)
------------------
